# FastAPI-vod

./: asgi.py  conftest.py  pyproject.toml  temp.sh  test.ps1
.github/workflows/: ci.yml
app/apis/v1/: meeting_router.py
app/configs/: base_config.py  tortoise_config.py
app/dtos/: create_meeting_response.py  get_meeting_response.py  update_meeting_request.py
app/tests/apis/v1/: test_meeting_router_mysql.py
app/tortoise_models/: meeting.py
app/utils/: base62.py
