[tool.poetry]
name = "vod"
version = "0.1.0"
description = ""
authors = ["urumuru <joss8129519@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.6"
unicorn = "^0.32.1"

[tool.poetry.group.dev.dependencies]
black = "24.10.0"
ruff = "0.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (==24.10.0)",
    "ruff (==0.8.2)"
]

[tool.black]
line-length = 120

[tool.ruff]
target-version = "py313"